--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -54,7 +54,7 @@
             li {
                 @include line-height(24px);
                 margin-bottom: 1em;
-                font-weight: 100;
+                font-weight: 300;
                 letter-spacing: .04em;
             }
 
@@ -77,6 +77,11 @@
                     @include span-col(1);
                     @include push-col(2);
                     margin-top: 0;
+                }
+
+                @include breakpoints("xl-desktop") {
+                    @include span-col(2);
+                    @include push-col(2);
                 }
             }
         }
