--- a/src/assets/scss/02_molecule/_case-study.scss
+++ b/src/assets/scss/02_molecule/_case-study.scss
@@ -128,11 +128,13 @@
         width: 100%;
         float: none;
         position: relative;
+        margin-bottom: 40px;
 
         @include breakpoints("tablet") {
             width: calc(50% - 62px);
             float: right;
             margin-right: 64px;
+            margin-bottom: 0;
         }
 
         @include breakpoints("sm-desktop") {
@@ -147,8 +149,10 @@
         position: absolute;
         left: 0;
         top: 110px;
+        display: none;
 
         @include breakpoints("tablet") {
+            display: block;
             top: 0;
         }
 
@@ -173,9 +177,12 @@
             z-index: 1;
             max-width: 100%;
             transition: all 0.6s ease !important;
+            max-height: 400px;
+            margin: 0 auto;
+            display: block;
 
             @include breakpoints("tablet") {
-                width: 550px;
+                max-height: initial;
             }
         }
     }
