--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -227,7 +227,7 @@
             top: 10px;
 
             @include breakpoints("tablet") {
-                right: 100px;
+                right: 20%;
             }
         }
 
