--- a/src/assets/scss/02_molecule/_contact-info.scss
+++ b/src/assets/scss/02_molecule/_contact-info.scss
@@ -14,6 +14,10 @@
             margin-bottom: auto;
         }
 
+        .-space {
+            margin-bottom: 40px;
+        }
+
         a {
             @include font-size("medium");
             @include line-height(34px);
