adding padding to list content

--- a/src/assets/scss/02_molecule/_case-study.scss
+++ b/src/assets/scss/02_molecule/_case-study.scss
@@ -111,6 +111,7 @@
 
             @include breakpoints("tablet") {
                 padding-left: 80px;
+                padding-right: 50px;
             }
 
             @include breakpoints("lg-desktop") {
