Fixed up the hero areas for case studies

--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -1256,6 +1256,31 @@
     }
 }
 
+.ipad-img {
+    @include breakpoints("tablet") {
+        position: relative;
+        right: -80px;
+    }
+}
+
+.-kd {
+    &-desktop-only {
+        display: none;
+
+        @include breakpoints("desktop") {
+            display: block;
+        }
+    }
+
+    &-mobile-only {
+        display: block;
+
+        @include breakpoints("desktop") {
+            display: none;
+        }
+    }
+}
+
 .pull-scroll::-webkit-scrollbar {
     display: none;  /* Safari and Chrome */
 }
