--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -98,33 +98,57 @@
         }
 
         .o-hero__title {
-            padding-top: 104px;
+            padding-top: 32px;
+
+            @include breakpoints("tablet") {
+                @include span-col(5);
+                @include push-col(1);
+                padding-top: 150px;
+            }
+
+            @include breakpoints("desktop") {
+                @include push-col(0);
+                padding-top: 164px;
+            }
 
             h1 {
                 @include font-size(44px);
                 @include line-height(48px);
+                margin-bottom: 32px;
 
-                @include breakpoints("tablet") {
+                @include breakpoints("phone") {
                     @include font-size(54px);
                     @include line-height(54px);
                 }
-            }
 
-            @include breakpoints("tablet") {
-                @include span-col(6);
-                padding-top: 300px;
+                @include breakpoints("lg-desktop") {
+                    @include font-size(70px);
+                    @include line-height(80px);
+                }
             }
         }
 
         .o-hero__image {
             margin: 0;
 
+            @include breakpoints("tablet") {
+                margin-top: 80px;
+            }
+
+            @include breakpoints("laptop") {
+                margin-top: 0;
+            }
+
+            @include breakpoints("desktop") {
+                @include push-col(1);
+            }
+
             img {
                 display: block;
                 max-width: 100%;
 
                 @include breakpoints("tablet") {
-                    max-width: 99999px;
+                    // max-width: 99999px;
                 }
             }
         }
@@ -132,6 +156,7 @@
         .o-hero__meta {
             color: get-color("primary", "white");
             padding: 80px 0;
+            margin-top: -42px;
 
             @include breakpoints("tablet") {
                 padding: 0;;
