--- a/src/assets/scss/03_organism/_slider.scss
+++ b/src/assets/scss/03_organism/_slider.scss
@@ -14,6 +14,7 @@
         left: -1000px;
         display: block;
         z-index: 1;
+        top: -1px;
     }
 
     // @include breakpoints("tablet") {
