--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -1175,6 +1175,10 @@
                         top: -100px;
                     }
 
+                    @include breakpoints("lg-desktop") {
+                        left: -400px;
+                    }
+
                     @include breakpoints("xl-desktop") {
                         left: -432px;
                         top: -156px;
@@ -1185,7 +1189,8 @@
                             width: 75%;
                         }
 
-                        @include breakpoints("xl-desktop") {
+
+                        @include breakpoints("lg-desktop") {
                             width: 100%;
                         }
                     }
@@ -1195,6 +1200,10 @@
                     @include breakpoints("laptop") {
                         right: -244px;
                         top: -44px;
+                    }
+
+                    @include breakpoints("lg-desktop") {
+                        right: -640px;
                     }
 
                     @include breakpoints("xl-desktop") {
@@ -1221,6 +1230,10 @@
                     img {
                         @include breakpoints("laptop") {
                             width: 50%;
+                        }
+
+                        @include breakpoints("lg-desktop") {
+                            width: 45%;
                         }
 
                         @include breakpoints("xl-desktop") {
