--- a/src/assets/scss/03_organism/_contact-form.scss
+++ b/src/assets/scss/03_organism/_contact-form.scss
@@ -83,6 +83,11 @@
 
         .a-button {
             margin-right: 60px;
+            cursor: pointer;
+
+            &.-disabled {
+                cursor: default;
+            }
         }
 
         button {
