commenting out homepage animation

--- a/src/assets/scss/02_molecule/_case-study.scss
+++ b/src/assets/scss/02_molecule/_case-study.scss
@@ -44,7 +44,7 @@
     &.-secondary {
 
         .m-case-study__texture {
-            right: -20px;
+            right: 0;
             top: 110px;
             transform: none;
             left: auto;
