changing breakpoint for homepage hero textrures

--- a/src/assets/scss/03_organism/_contact-form.scss
+++ b/src/assets/scss/03_organism/_contact-form.scss
@@ -32,6 +32,10 @@
 
         &.-light {
             background: get-color("primary", "white");
+
+            header {
+                color: get-color("primary", "after-hours");
+            }
         }
 
         h6 {
