--- a/src/assets/scss/05_page/_interior-page.scss
+++ b/src/assets/scss/05_page/_interior-page.scss
@@ -27,7 +27,7 @@
             margin-bottom: 29px;
 
             @include breakpoints("tablet") {
-                margin-bottom: 112px;
+                margin-bottom: 0;
             }
         }
 
