--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -234,6 +234,11 @@
         position: absolute;
         mix-blend-mode: multiply;
         opacity: 0;
+        width: 50%;
+
+        @include breakpoints("tablet") {
+            width: auto;
+        }
 
         &.-drops {
             left: 50%;
@@ -243,7 +248,6 @@
         &.-pink-blob {
             top: 0;
             right: 0;
-            width: 800px;
         }
 
         &.-blue-blob-two {
