--- a/src/assets/scss/05_page/_interior-page.scss
+++ b/src/assets/scss/05_page/_interior-page.scss
@@ -11,7 +11,7 @@
         }
 
         @include breakpoints("desktop") {
-            padding-top: 180px;
+            padding-top: 0;
         }
 
         &__titles {
