fixing hero interior pages

--- a/src/assets/scss/05_page/_interior-page.scss
+++ b/src/assets/scss/05_page/_interior-page.scss
@@ -25,6 +25,7 @@
 
         &__top {
             margin-bottom: 29px;
+            height: auto;
 
             @include breakpoints("tablet") {
                 margin-bottom: 0;
