--- a/src/assets/scss/02_molecule/_header.scss
+++ b/src/assets/scss/02_molecule/_header.scss
@@ -11,6 +11,7 @@
         top: 50px;
         padding: 0;
         background: transparent;
+        overflow: hidden;
     }
 
     &__background {
