Fixed issue with breakpoints for the location section.

--- a/src/assets/scss/02_molecule/_contact-info.scss
+++ b/src/assets/scss/02_molecule/_contact-info.scss
@@ -15,6 +15,10 @@
             margin-bottom: auto;
         }
 
+        @include breakpoints("lg-desktop") {
+            @include push-col(0);
+        }
+
         .-space {
             margin-bottom: 40px;
         }
