Updated the slider to include the pull icon and fixed an issue with the contact page.

--- a/src/assets/scss/00_base/_typography.scss
+++ b/src/assets/scss/00_base/_typography.scss
@@ -125,7 +125,7 @@ a {
             @include font-size(16px);
             font-family: $font-primary;
 
-            @include breakpoints("desktop") {
+            @include breakpoints("tablet") {
                 @include font-size(20px);
             }
         }
