--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -185,6 +185,12 @@
         }
     }
 
+    &.-contact {
+        .o-hero__titles {
+            padding-top: 0;
+        }
+    }
+
     &.-four-o-four{
         .o-hero__titles {
             padding-top: 0;
