--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -110,13 +110,9 @@
                 padding-top: 150px;
             }
 
-            @include breakpoints("laptop") {
-                padding-top: 88px;
-            }
-
-            @include breakpoints("lg-laptop") {
+            @include breakpoints("desktop") {
                 @include push-col(1);
-                padding-top: 150px;
+                padding-top: 220px;
             }
 
             @include breakpoints("lg-desktop") {
