--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -727,8 +727,7 @@
         }
 
         ul {
-            list-style: none;
-            padding: 0;
+            margin-bottom: 60px;
         }
 
         .easter-egg {
