--- a/src/assets/scss/02_molecule/_case-study.scss
+++ b/src/assets/scss/02_molecule/_case-study.scss
@@ -56,6 +56,12 @@
         }
     }
 
+    &.-modified {
+        .m-case-study__image {
+            max-width: 85%;
+        }
+    }
+
     &.-visible {
 
         .a-button,
