AWE-133: Latest updates for the career link case study

--- a/src/assets/scss/01_atom/__atoms.scss
+++ b/src/assets/scss/01_atom/__atoms.scss
@@ -3,6 +3,7 @@
 \*------------------------------------*/
 @import "buttons",
         "easter-egg",
+        "full-width-background",
         "radio",
         "input",
         "label",
