--- a/src/assets/scss/02_molecule/__molecules.scss
+++ b/src/assets/scss/02_molecule/__molecules.scss
@@ -8,4 +8,6 @@
         "footer",
         "fieldset",
         "case-study",
-        "case-study-page-content";
+        "case-study-collage",
+        "case-study-page-content",
+        "case-study-image-swatch";
