--- a/src/assets/scss/05_page/_interior-page.scss
+++ b/src/assets/scss/05_page/_interior-page.scss
@@ -8,6 +8,12 @@
             @include breakpoints("desktop") {
                 padding-top: 80px;
             }
+
+            &.-spaced {
+                @include breakpoints("desktop") {
+                    padding-top: 180px;
+                }
+            }
         }
 
         @include breakpoints("desktop") {
