Update the content section header alignment

--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -796,6 +796,7 @@
             &__header {
                 @include span-col(12);
                 color: get-color("neutral", "medium-gray");
+                height: 20px;
                 margin-bottom: 20px;
                 margin-left: 0;
                 font-weight: 600;
