Tweaks on the case study based on feedback from design

--- a/src/assets/scss/02_molecule/_case-study-image-swatch.scss
+++ b/src/assets/scss/02_molecule/_case-study-image-swatch.scss
@@ -26,6 +26,7 @@
 
     + .full-width-background {
         margin-top: -75px;
+        padding-bottom: 40px;
         padding-top: 100px;
     }
 }
