--- a/src/assets/scss/02_molecule/_case-study-collage.scss
+++ b/src/assets/scss/02_molecule/_case-study-collage.scss
@@ -7,7 +7,7 @@
     }
 
     @include breakpoints("laptop") {
-        margin-bottom: 0;
+        margin-bottom: -90px;
         text-align: inherit;
 
         img {
