--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -525,11 +525,13 @@
         }
 
         ol {
-            margin-top: 48px;
-            @include font-size(20px);
-            @include line-height(40px);
+            margin-top: 24px;
+            padding-left: 20px;
+            @include font-size(14px);
+            @include line-height(28px);
 
             @include breakpoints("tablet") {
+                margin-top: 48px;
                 @include font-size(24px);
                 @include line-height(48px);
             }
