--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -56,6 +56,7 @@
             padding: 0;
 
             li {
+                @include font-size(16px);
                 @include line-height(24px);
                 margin-bottom: 1em;
                 font-weight: 300;
@@ -86,6 +87,10 @@
                 @include breakpoints("xl-desktop") {
                     @include span-col(2);
                     @include push-col(2);
+                }
+
+                h6 {
+                    font-weight: 600;
                 }
             }
         }
