--- a/src/assets/scss/03_organism/_hero.scss
+++ b/src/assets/scss/03_organism/_hero.scss
@@ -90,6 +90,7 @@
                 }
 
                 h6 {
+                    @include font-size(14px);
                     font-weight: 600;
                 }
             }
