AWE-112: Removing the small dots on mobile so it does not interfere with the white text

--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -346,6 +346,11 @@
             &.-dots-small {
                 right: -100px;
                 bottom: 180px;
+                display: none;
+
+                @include breakpoints("tablet") {
+                    display: block;
+                }
             }
         }
 
