AWE-113: Updating the sticky note image position on mobile

--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -650,12 +650,34 @@
 
         &.-image-right {
             position: relative;
-            padding-right: 90px;
+            padding-right: 0;
+
+            @include breakpoints("sm-tablet") {
+                padding-right: 90px;
+            }
 
             img {
                 position: absolute;
                 left: calc(100% - 100px);
                 top: 0;
+            }
+
+            header {
+                padding-right: 90px;
+
+                @include breakpoints("sm-tablet") {
+                    padding-right: 0px;
+                }
+            }
+
+            p {
+                &:first-of-type {
+                    padding-right: 90px;
+
+                    @include breakpoints("sm-tablet") {
+                        padding-right: 0px;
+                    }
+                }
             }
         }
 
