AWE-93: Updating the spacing on the color block

--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -964,6 +964,10 @@
                 max-width: 99999px;
             }
         }
+
+        + .m-case-study-page-content__color-block.-pulse {
+            padding-top: 100px;
+        }
     }
 
     &__next {
