--- a/src/assets/scss/02_molecule/_case-study-page-content.scss
+++ b/src/assets/scss/02_molecule/_case-study-page-content.scss
@@ -694,7 +694,11 @@
             }
 
             .content__copy {
-                padding: 80px 0 120px;
+                padding: 80px 0 60px;
+
+                @include breakpoints("tablet") {
+                    padding: 80px 0 120px;
+                }
 
                 @include breakpoints("xl-desktop") {
                     padding: 252px 0 150px;
@@ -966,7 +970,9 @@
         }
 
         + .m-case-study-page-content__color-block.-pulse {
-            padding-top: 100px;
+            @include breakpoints("tablet") {
+                padding-top: 100px;
+            }
         }
     }
 
